tests/cases_invalid/buffers/.expected
error: undefined item
 --> ./cases_invalid/buffers/expr_var_missing_source.shd:1:14
  |
1 | buf buffer = missing;
  |              ^^^^^^^
  |              |
  |              `missing` variable is undefined
  |

error: `buffer1` variable defined multiple times
 --> ./cases_invalid/buffers/not_unique.shd:3:1
  |
1 | buf buffer1 = 0;
  | ---------------- info: same item defined here
2 | buf buffer2 = 0;
3 | buf buffer1 = 0;
  | ^^^^^^^^^^^^^^^^
  | |
  | duplicated item
  |